--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,54 @@
 version: '3'
-services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
 
+services:
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-1234}
   kafka:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper
+    build: ./kafka
+    container_name: kafka
+    environment:
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - EXTERNAL_HOST=${EXTERNAL_HOST:-localhost}
     ports:
       - "9092:9092"
-      - "7071:7071" # Exportador JMX para Kafka
+      - "9093:9093"
+    volumes:
+      - kafka-data:/bitnami/kafka
+      - kafka-config:/bitnami/kafka/config
+  kafka-exporter:
+    build: ./kafka-exporter
+    ports:
+      - "9308:9308"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      JMX_PORT: 7071
-    entrypoint: [ "/bin/bash", "-c", "kafka-topics --create --topic request_topic --bootstrap-server kafka:9092 --partitions 1 --replication-factor 1 --if-not-exists" ]
+      - KAFKA_SERVER=kafka:29092
+    depends_on:
+      - kafka
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:latest
     ports:
       - "9090:9090"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:latest
     ports:
-      - "3001:3001"
-    depends_on:
-      - prometheus
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana-storage:/var/lib/grafana
+
+volumes:
+  kafka-data:
+  grafana-storage:
+  kafka-config:
+  redis-data:
