--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "Observables.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app/index.js"
   },
   "keywords": [],
   "author": "",
@@ -11,9 +12,15 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "kafka-node": "^5.0.0",
+    "kafkajs": "^2.2.4",
     "mysql2": "^3.11.0",
-    "rxjs": "^7.8.1"
+    "prom-client": "^15.1.3",
+    "redis": "^4.7.0",
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
