--- a/app/services/user-service/package.json
+++ b/app/services/user-service/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"build": "tsc",
 		"start": "node dist/index.js",
-		"dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
+		"dev": "tsc --watch & node --watch dist/index.js",
 		"lint": "eslint 'src/**/*.{ts,tsx}'",
 		"lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
 		"test": "jest"
@@ -18,14 +18,15 @@
 	"license": "ISC",
 	"description": "",
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/jest": "^29.5.13",
+		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node": "^22.5.5",
 		"@types/supertest": "^6.0.2",
 		"@typescript-eslint/eslint-plugin": "^8.6.0",
 		"@typescript-eslint/parser": "^8.6.0",
 		"eslint": "^9.11.0",
 		"jest": "^29.7.0",
-		"nodemon": "^3.1.7",
 		"prettier": "^3.3.3",
 		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
@@ -33,14 +34,17 @@
 		"typescript": "^5.6.2"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.0",
 		"ioredis": "^5.4.1",
+		"jsonwebtoken": "^9.0.2",
 		"kafkajs": "^2.2.4",
 		"mysql2": "^3.11.3",
-		"sequelize": "^6.37.3"
+		"reflect-metadata": "^0.2.2",
+		"typeorm": "^0.3.20"
 	}
 }
